# skillenv

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: adapters.md  lockfile-spec.md  manifest-spec.md  publishing.md  quickstart.md
docs/superpowers/plans/: 2026-06-01-skillenv-mvp.md
src/skillenv/: __main__.py  cli.py  config.py  envs.py  inspect.py  install.py  lock.py  manifest.py  plugin_adapter.py  plugins.py  presets.py  registry.py  runner.py
src/skillenv/registry/: skills.json
tests/: test_cli.py  test_envs.py  test_github_install.py  test_inspect.py  test_lock.py  test_plugin_adapter.py  test_plugins.py  test_presets.py  test_registry.py  test_runner.py
