[project]
name = "skillenv"
version = "0.1.0"
description = "A Conda-like environment manager for agent skills."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "skillenv contributors" },
]
keywords = ["codex", "agents", "skills", "environment-manager", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
]
dependencies = [
  "typer>=0.12",
  "tomli-w>=1.0",
]

[project.urls]
Homepage = "https://github.com/Kobelyww/skillenv"
Repository = "https://github.com/Kobelyww/skillenv"
Issues = "https://github.com/Kobelyww/skillenv/issues"

[project.scripts]
skillenv = "skillenv.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skillenv"]
artifacts = ["src/skillenv/registry/skills.json"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/docs",
  "/registry",
  "/README.md",
  "/LICENSE",
  "/CONTRIBUTING.md",
  "/RELEASE.md",
  "/pyproject.toml",
  "/uv.lock",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
